@@ -1,3 +1,11 @@
+2008-01-15  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/bumpmap.c
+	* plug-ins/script-fu/scripts/swirltile.scm: applied patch from
+	Ulf-D. Ehlert that catches a potential division by zero in the
+	Bumpmap plug-in and adjusts the range of the Depth parameter in
+	the Swirl-Tile script (bug #509608).
+
 2008-01-15  Kevin Cozens  <kcozens@cvs.gnome.org>
 
 	* plug-ins/script-fu/scripts/3d-outline.scm
